--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
         </dependency>
 
         <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-server</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>javax.persistence</groupId>
             <artifactId>javax.persistence-api</artifactId>
             <version>2.2</version>
@@ -67,15 +74,10 @@
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
 <!--
-            <version>3.2.0</version> &lt;!&ndash; Use the latest version available &ndash;&gt;
+            <version>3.2.0</version>
 -->
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.kafka</groupId>-->
-<!--            <artifactId>spring-kafka-test</artifactId>-->
-<!--            <version>2.8.2</version> &lt;!&ndash; Use the latest version available &ndash;&gt;-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
+
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
@@ -105,7 +107,7 @@
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
-            <version>3.0.0</version> <!-- Use the latest version compatible with your Spring Boot version -->
+            <version>3.1.1</version> <!-- Use the latest version compatible with your Spring Boot version -->
         </dependency>
         <dependency>
             <groupId>org.apache.kafka</groupId>
